current SVN version
	Isgl3dPODImporter: moved into main isgl3d target (keep .h from isgl3d.h to remove objective-m compilation errors)
	Added Xcode 4 templates, updated Xcode 3 templates
	Added demos for spring and follow cameras
	Isgl3dFollowCamera: fix bug in Isgl3dFollowCamera (Issue #2)
	Remove deprecated methods
	Isgl3dQuaternion: added
	Isgl3dNode: optimising recalculation of matrices
	Isgl3dNode: added pitch, yaw and roll to facilitate rotation of object about its local coordinate system
	Isgl3dNode: added properties for rotation, scale and position. Rotation can now be set independently along different axes
	Isgl3dNode: translate deprecated (will be removed in v1.2). Use setTranslateByValues
	Isgl3dNode: setTranslation deprecated (will be removed in v1.2). Use setPosition
	Isgl3dNode: remove ambiguity from method names involving translation: 
		"translate" is along is in the frame of reference of the object
		"position" is the coordinate position of the object ignoring rotational effects
	Hardware accelerated matrix operations using VFPmathLibrary (ARMv6) and math-neon library (ARMv7) added (implemented by Holger Wiedemann)
	NSCopying protocol implemented for principal node types
	
version 1.1.5 (2011-04-11)
	Isgl3dTexturePrecision enum added to replace #defines (int) - other to become deprecated in v1.2
	Static methods for allocation (autorelease) and initialisation in all framework classes. Modifications accordingly internally and to tests
	Isgl3dShader: output error message when shader files not found
	Isgl3dLight: Fix bug in initWithColorArray
	Isgl3dColorUtil: Fix rounding problem when creating NSString from rgb/rgba colors
	Isgl3dArray: added as container for any data type not just objective c objects (eg structs).
	Isgl3dNode: added clarity to method names involving transformations
	Isgl3dVector3, Isgl3dVector4, Isgl3dMatrix4: added and used in all internal calculations (performance gain)